# HKLine

./: .gitignore  CMakeLists.txt  README.md
include/: FrameProcessor.h  LineCamera.h  MvObsoleteInterfaces.h  ObsoleteCamParams.h
src/: FrameProcessor.cpp  LineCamera.cpp  main.cpp
